eventとqueue(sqs)連携

--- a/app/ChatterBot/.env.example
+++ b/app/ChatterBot/.env.example
@@ -45,3 +45,11 @@ AWS_SESSION_TOKEN=
 DYNAMODB_REGION=
 DYNAMODB_DEBUG=
 DYNAMODB_LOCAL_ENDPOINT
+
+# SQS
+QUEUE_CONNECTION=sqs
+SQS_KEY=
+SQS_SECRET=
+SQS_PREFIX=
+SQS_QUEUE=
+SQS_REGION=ap-northeast-1
