--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,6 +4,5 @@ ADD php.ini /usr/local/etc/php
 # application setting
 COPY ./ChatterBot /var/www/html/ChatterBot
 # cron setting
-ADD artisan-job-cron /etc/cron.d/artisan-job-cron
-RUN chmod 0644 /etc/cron.d/artisan-job-cron
-
+COPY artisan-job-cron /var/spool/cron/crontabs/root
+CMD ["/bin/busybox", "crond", "-f"]
