セキュリティ対策 CMDインジェクション

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,3 +6,4 @@ COPY ./ChatterBot /var/www/html/ChatterBot
 # cron setting
 COPY artisan-job-cron /var/spool/cron/crontabs/root
 CMD ["/bin/busybox", "crond", "-f"]
+CMD ["apachectl", "-D", "FOREGROUND"]
