--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,8 @@
 from nanayu/munoh-api:latest
 # php customize
-ADD php.ini /usr/local/etc/php
+COPY php.ini /usr/local/etc/php
 # application setting
 COPY ./ChatterBot /var/www/html/ChatterBot
 # cron setting
 COPY artisan-job-cron /var/spool/cron/crontabs/root
-CMD ["/bin/busybox", "crond", "-f"]
-CMD ["apachectl", "-D", "FOREGROUND"]
+CMD bash -c "busybox crond && apachectl -D FOREGROUND"
