--- a/app/ChatterBot/.env.example
+++ b/app/ChatterBot/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=stderr
 DEBUG_LOG_LEVEL=info
 
 DB_CONNECTION=mysql
